United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6994562 Swing classes (both JTextArea and JTextField) don't support caret width tuning
6994562 : Swing classes (both JTextArea and JTextField) don't support caret width tuning

Details
Type:
Bug
Submit Date:
2010-10-25
Status:
Closed
Updated Date:
2013-04-20
Project Name:
JDK
Resolved Date:
2011-10-17
Component:
client-libs
OS:
windows_xp
Sub-Component:
javax.swing
CPU:
x86
Priority:
P2
Resolution:
Fixed
Affected Versions:
6
Fixed Versions:
6u30

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
Swing classes (both JTextArea and JTextField) don't support
caret width tuning.
Steps to reproduce:
1. In Windows go to:
a. Control Panel=>Accessibility Option=>Display
b. Under Cursor Options move slider all the way to the right to make it as wide as possible.
c. Select apply
2. From a command prompt, run "java TextTest" using the new jdk.

                                    

Comments
EVALUATION

Unlike AWT library which uses Win32 calls to manage caret, Swing encapsulates caret behaviour in standalone class. Currently there's no support of Windows Accessibility tools.
                                     
2010-11-24



Hardware and Software, Engineered to Work Together