6994562: Swing classes (both JTextArea and JTextField) don't support caret width tuning

Reviewed-by: rupashka, art